--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,9 @@ display: none;
 .services a{
     text-decoration: none;
 }
+.service-margin{
+  margin-top: 120px!important;
+}
 
 /* --------------------services end------------------------ */
 
@@ -329,192 +332,123 @@ display: none;
 .products{
     margin-top: 150px;
 }
-.products img{
-    border-radius: 15px;
+.products-margin{
+  margin-top: 200px!important;
 }
-.products .filterbox{
-    margin-top: 50px;
+.revGallery-anchor, .gal-overlay, .nak-gallery-poster{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.products a{
-    text-decoration: none;
+.revGallery-anchor{
+  overflow: hidden;
+  position: relative;
+  width: calc(100% / 5);
+  display: block;
+  float: left;
+  border: 5px solid #e9e9e9;
 }
-
-
-.filter-tabs{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:15px 0 35px;
-}  
-.navigation a{
-    margin-right:5px;
-    padding:9px 25px;
-    text-decoration: none;
-    border-radius: 6px;
-    color:#696B6D;
-    transition:all .5s ease;
-} 
-.navigation a:hover{
-    color:#0D4C91;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 5px;
-    text-decoration-color: #0D4C91;
-    text-decoration-thickness: 1px;
+.gal-overlay{
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: rgba(27,27,27, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: background .4s ease;
+  -webkit-transition: background .4s ease;
 }
-.navigation a.active{
-    color:#0D4C91;
-    font-weight: bold;
-    text-decoration: underline;
-    text-underline-offset: 5px;
-    text-decoration-color: #0D4C91;
-    text-decoration-thickness: 1px;
-} 
-
-
-@media (max-width: 767px){
-    .shot-thumbnail{
-        margin-top:20px;
-    }
-    .filter-tabs{
-        flex-wrap:wrap;
-    }
-    .filter-sort{
-        width:100%;
-    }
-    .navigation{
-        display:flex;
-        overflow-x:scroll;
-        margin-top:15px;
-        padding-bottom:15px;
-    }
-    .navigation::-webkit-scrollbar{
-        width:10px;
-        height: 6px;
-    }
-    .navigation::-webkit-scrollbar-track{
-         background:#f1f1f1;
-    }
-    .navigation::-webkit-scrollbar-thumb{
-         background:#888;
-    }
+.revGallery-anchor:hover .gal-overlay{
+  background: rgba(27,27,27, 0);
 }
-@media (max-width: 576px){
-     .px-0{
-         padding:0px;
-     }
+.nak-gallery {
+  display: block;
+  width: 100%;
+  position: relative;
+  margin-top: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 }
-  
-
-
-#flexbox {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  
-  .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    vertical-align: middle;
-    /* margin-top: 8px; */
-    /* filter: grayscale(70%); */
-  }
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
-
-
-
-  .wg-box-content {
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-    margin: auto;
-    overflow: hidden;
-    margin-bottom: 8px;
-  }
-  .wg-box-content button{
-    border: 0;
-    padding: 5px 10px;
-    background-color: #e2e2eb;
-    color: #0D4C91;
-    border-radius: 8px;
-    transition: 0.3s ease;
-  }
-  .wg-box-content button:hover{
-    opacity: 0.7;
-  }
-  .wg-box-content .wg-box-content-overlay {
-    background: rgba(0,0,0,0.7);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0;
-    -webkit-transition: all 0.4s ease-in-out 0s;
-    -moz-transition: all 0.4s ease-in-out 0s;
-    transition: all 0.4s ease-in-out 0s;
-    border-radius: 15px;
-  }
-  
-  .wg-box-content:hover .wg-box-content-overlay{
-    opacity: 1;
-  }
-  
-  .wg-box-content-image{
-    width: 100%;
-  }
-  
-  .wg-box-content-details {
-    position: absolute;
-    text-align: center;
-    padding-left: 1em;
-    padding-right: 1em;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    opacity: 0;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-  }
-  
-  .wg-box-content:hover .wg-box-content-details{
-    top: 50%;
-    left: 50%;
-    opacity: 1;
-  }
-  
-  .wg-box-content-details p{
-    color: #fff;
-    font-size: 0.8em;
-  }
-  
-  .wg-box-fadeIn-bottom{
-    top: 80%;
-  }
-
+.nak-gallery-poster{
+  padding-bottom:100%;
+  transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  transform: scale(1, 1);
+  -webkit-transform: scale(1, 1);
+  -ms-transform: scale(1, 1);
+  transition: all .4s ease;
+  -webkit-transition: all .4s ease;
+}
+.revGallery-anchor:hover .nak-gallery-poster{
+  transform: scale(1.1, 1.1);
+  -webkit-transform: scale(1.1, 1.1);
+  -ms-transform: scale(1.1, 1.1);
+}
+.img-responsive{
+  display:none;
+}
+.products .filter-buttons{
+  margin-top: 50px;
+}
+.products .button{
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition: all .4s ease;
+  -moz-transition: all .4s ease;
+  -o-transition: all .4s ease;
+  transition: all .4s ease;
+  border: 0;
+  border-radius: 0;
+  color: #2b2525;
+  background-color: transparent;
+}
+.products .button:hover {
+  text-shadow: 0 1px hsla(0, 0%, 100%, 0.5);
+  color: #0D4C91;
+  font-weight: bold;
+}
+.products .button:active,
+.products .button.is-checked {
+  border-bottom: 1px solid #0D4C91;
+}
+.products  .button.is-checked {
+  color: #0D4C91;
+  font-weight: bold;  
+}
+.products .button:active {
+  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
+}
+.revGallery-anchor-width1{
+  width: 40%
+}
+.revGallery-anchor-width2{
+  width: 30%
+}
+.revGallery-anchor-width3{
+  width: 20%
+}
+.nak-gallery-height1{
+  padding-bottom: 400px
+}
+.nak-gallery-height2{
+  padding-bottom: 300px
+}
+.nak-gallery-height3{
+  padding-bottom: 200px
+}
+.preloader{
+  display: none;
+}
+.preloaderStyle{
+  background: red;
+  width: 100%;
+  height: 100px;
+}
 
   /* --------------------products end------------------------ */
 
@@ -775,10 +709,10 @@ display: none;
   .contact-us .right-col-bg form label{
     color: #0D4C91;
   }
-  .padding-0{
+  /* .padding-0{
     padding-left: 0;
     padding-right: 0;
-  }
+  } */
   .contact-us .right-col-bg form input, .contact-us .right-col-bg form textarea{
     background-color: #0d4d910c;
     border: 0;
@@ -839,3 +773,13 @@ display: none;
   }
 
   /* --------------------about-us end------------------------ */
+
+
+  /* --------------------service-details end------------------------ */
+
+  .service-details{
+    margin-top: 200px;
+  }
+  /* --------------------service-details end------------------------ */
+
+  
